# QuakePallets

./: .gitignore  AGENTS.md  CHECKLIST.md  CHECKLIST_2_UI_TEXT.md  CLEAN_ROOM_PROTOCOL.md  Cargo.toml  LICENSE_POLICY.md  MODERN_ENGINE_FEATURES.md  README.md  deny.toml  justfile  movies_playlist.txt
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml
audio/: Cargo.toml
audio/src/: lib.rs
character_collision/: Cargo.toml
character_collision/src/: lib.rs
character_motor_arena/: Cargo.toml
character_motor_arena/src/: lib.rs
character_motor_rpg/: Cargo.toml
character_motor_rpg/src/: lib.rs
collision_world/: Cargo.toml
collision_world/src/: lib.rs
compat_quake/: Cargo.toml
compat_quake/fuzz/: Cargo.toml
compat_quake/fuzz/fuzz_targets/: fuzz_bsp.rs  fuzz_lmp.rs  fuzz_pak.rs
compat_quake/src/: bsp.rs  bsp_q3.rs  lib.rs  lmp.rs  pak.rs
completed_checklists/: CHECKLIST.md  CHECKLIST_2_5_ENGINE_SUBSTRATE_V1.md  CHECKLIST_2_9_CONTROL_PLANE_CORE_V1.md  CHECKLIST_2_UI_TEXT.md  CHECKLIST_3_ASSET_PLATFORM.md  CHECKLIST_4_DEBUG_CONTROL_PLANE_EXTENSIONS_V1.md  CHECKLIST_5_collision_character_controller_v1.md  NON_CHECKLIST_CHANGES.md  RUNNER_GUI_INVENTORY.md
content/collision_world/test_maps/: corridors_and_doors.toml  flat_friction_lane.toml  ledges_and_landings.toml  pillar_slalom.toml  ramps_and_transitions.toml  redirect_pad_90.toml  soft_bhop_course.toml  stairs_and_steps.toml  strafe_jump_build.toml
content/config/cvars/: config.cfg  settings.cfg
content/config/mounts/: default.txt
content/config/scripts/: capture_test.cfg  control_plane_checklist_2_9.cfg  demo.lua  regression_input_trace.cfg  smoke_capture.cfg  smoke_m5.cfg
content/fixtures/golden/config/console/: console_welcome.txt
content/fixtures/golden/levels/golden/: level.toml
content/fixtures/golden/text/fixtures/: golden.cfg
content/levels/e1m1/: level.toml
content/script/: demo.lua  regression_input_trace.lua
content/test_maps/: corridors_and_doors.toml  flat_friction_lane.toml  ledges_and_landings.toml  pillar_slalom.toml  ramps_and_transitions.toml  redirect_pad_90.toml  soft_bhop_course.toml  stairs_and_steps.toml  strafe_jump_build.toml
current_checklist/: CHECKLIST_2_5_ENGINE_SUBSTRATE_V1.md  CHECKLIST_4_DEBUG_CONTROL_PLANE_EXTENSIONS_V1.md  CHECKLIST_5_collision_character_controller_v1.md  CHECKLIST_RUNNER_GUI_V1.md  CHECKLIST_TEST_MAP_FORMAT_V1.md  MAP_SIDECAR_FORMAT_V1.md  camera_control_frame_spec_v1.md  golden_angle_arena_motor_spec_v1.md  player_movement_spec_golden_angle_v1_tune_ready_angle_coupled.md  player_movement_spec_rpg_v1.md
docs/: ARCHITECTURE.md  BOOT.md  COLLISION_PLATFORM.md  PATH_POLICY.md  VFS_MOUNTS.md  asset_platform_rules.md  cvar_naming.md
ecs/: Cargo.toml
ecs/src/: lib.rs
engine_core/: Cargo.toml
engine_core/src/: asset_id.rs  asset_manager.rs  asset_resolver.rs  control_plane.rs  jobs.rs  level_manifest.rs  lib.rs  logging.rs  mount_manifest.rs  observability.rs  path_policy.rs  quake_index.rs  vfs.rs
engine_game/: Cargo.toml
map_cook/: Cargo.toml
map_cook/src/: bsp_cook.rs  lib.rs  quadtree.rs  sidecar.rs
net/client/: Cargo.toml
net/client/src/: lib.rs
net/net_protocol/: Cargo.toml
net/net_protocol/src/: lib.rs
net/net_transport/: Cargo.toml
net/net_transport/src/: lib.rs
net/server/: Cargo.toml
net/server/src/: lib.rs
pallet/: Cargo.toml
pallet/src/: main.rs  settings.rs  ui.rs  video.rs
pallet_runner_gui/: Cargo.toml  build.rs
pallet_runner_gui/src/: config.rs  main.rs
physics_rapier/: Cargo.toml
physics_rapier/src/: lib.rs
platform_winit/: Cargo.toml
platform_winit/src/: lib.rs
player_camera/: Cargo.toml
player_camera/src/: lib.rs
player_controller/: Cargo.toml
player_controller/src/: lib.rs
render_wgpu/: Cargo.toml
render_wgpu/src/: lib.rs  text_overlay.rs
script_lua/: Cargo.toml
script_lua/src/: lib.rs
test_map/: Cargo.toml
test_map/src/: lib.rs
tools/: Cargo.toml  README.md
tools/src/: main.rs
video_theora/: Cargo.toml  build.rs
video_theora/src/: lib.rs
