[workspace]
resolver = "2"
members = [
  "pallet",
  "pallet_runner_gui",
  "platform_winit",
  "render_wgpu",
  "audio",
  "video_theora",
  "script_lua",
  "ecs",
  "engine_core",
  "engine_game",
  "physics_rapier",
  "character_collision",
  "character_motor_arena",
  "character_motor_rpg",
  "player_camera",
  "player_controller",
  "map_cook",
  "collision_world",
  "test_map",
  "net/net_transport",
  "net/net_protocol",
  "net/client",
  "net/server",
  "compat_quake",
  "tools",
]

[patch.crates-io]
bindgen = { path = "third_party/bindgen" }
glyphon = { path = "third_party/glyphon" }
