[package]
name = "audio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
miniaudio = { path = "../third_party/miniaudio-rs/miniaudio", version = "0.10.0", default-features = false, features = ["bindgen", "ma-enable-vorbis", "ma-log-level-error"] }
