[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
net_transport = { path = "../net_transport", version = "0.1.0" }
net_protocol = { path = "../net_protocol", version = "0.1.0" }

[dev-dependencies]
client = { path = "../client", version = "0.1.0" }
